# opengl_learning

./: .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd_prebuild/: .gitignore
cmake/: CompilerSettings.cmake  UseGLEWithX64.cmake  UseGLFWithX64.cmake  UseImGuiWithOpenGL.cmake
samples/03_modern_gl/: main.cpp
samples/04_modern_gl_glsl/: main.cpp
samples/06_error_handing/: main.cpp
samples/08_vertex_array/: main.cpp
samples/09_abstracting/: index_buffer.cpp  renderer.h  shader.cpp  shader.h
samples/09_abstracting/resource/shaders/: uniform_fragment.glsl
samples/10_texture/: main.cpp  renderer.cpp  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.h
samples/11_math/: error.h  main.cpp
samples/11_mvp/: index_buffer.h  main.cpp  shader.cpp  texture.cpp  vertex_buffer.cpp
samples/11_mvp/resource/shaders/: texture_fragment.glsl
samples/12_imgui/: main.cpp
samples/12_imgui/resource/shaders/: proj_vertex.glsl
samples/13_multiple_objects/: main.cpp
samples/14_batch_rendering/: main.cpp  shader.cpp  shader.h  vertex_buffer.cpp
samples/14_batch_rendering/resource/shaders/: batch_fragment.glsl  batch_vertex.glsl
samples/15_getting_started/: camera.cpp  error.cpp  main.cpp  renderer.cpp
samples/15_getting_started/resource/shaders/: merge_fragment.glsl
samples/16_lighting/: camera.cpp  camera.h  error.h  main.cpp  material.hpp  renderer.h  shader.cpp  shader.h  texture.h  vertex_buffer.h
samples/16_lighting/resource/shaders/: light_fragment.glsl  light_vertex.glsl  lightcaster_fragment.glsl  lightmap_fragment.glsl  lightmap_vertex.glsl  material_fragment.glsl  object_fragment.glsl  object_vertex.glsl
samples/17_model_loading/: camera.h  error.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.hpp
samples/17_model_loading/resource/shaders/: model_fragment.glsl
samples/18_depth_testing/: camera.cpp  main.cpp  model.cpp
samples/18_depth_testing/resource/models/backpack/: source_attribution.txt
samples/18_depth_testing/resource/shaders/: depth_fragment.glsl
samples/19_stencil_testing/: main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h
samples/19_stencil_testing/resource/models/backpack/: backpack.mtl
samples/19_stencil_testing/resource/shaders/: stencil_fragment.glsl
samples/1_hello_glfw/: main.cpp
samples/20_blending/: index_buffer.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  renderer.h
samples/20_blending/resource/shaders/: blend_fragment.glsl  model_vertex.glsl
samples/21_face_culling/: error.cpp  index_buffer.h  main.cpp  mesh.h  model.h  shader.cpp  texture.h  vertex_buffer.cpp
samples/21_face_culling/resource/shaders/: simple.fs  simple.vs
samples/2_hello_glew/: main.cpp
samples/5_index_buffer/: main.cpp
samples/7_uniforms/: main.cpp
samples/9_abstracting/: error.cpp  index_buffer.cpp  main.cpp  render.cpp  render.h  shader.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.hpp
samples/modern_gl/: main.cpp
samples/modern_gl_glsl/: main.cpp
